docs/examples/invalid/semanticErr/extension/class/nonExistentMethod.wacc
{
  class A {
    int[] a;

    void init(int[] x) {
      @a = x
    }
  }

  A a = new A() ;

  call a->b()
}
